Part 1 successfully completed

--- a/Day1/Day1.csproj
+++ b/Day1/Day1.csproj
@@ -7,4 +7,15 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <None Remove="input.txt" />
+      <Content Include="input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+      <None Remove="inputTest.txt" />
+      <Content Include="inputTest.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
 </Project>
